--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -33,28 +33,51 @@
     </div>
     </main>
     <script>
-        function toggleTheme() {
+        function applyTheme(theme) {
+            const body = document.body;
+            const generateBtn = document.getElementById("generateBtn");
+            const toggleBtn = document.getElementById("botao");
             const image = document.getElementById("score");
             const normal = "{{ url_for('static', filename='score.png') }}";
             const dark = "{{ url_for('static', filename='score_dark.png') }}";
-            const body = document.body;
-            const tgbutton = document.getElementById("botao");
-            const generateBtn = document.getElementById("generateBtn");
-            const leftheader = document.getElementById("leftheader");
-            const rightheader = document.getElementById("rightheader");
 
-            body.classList.toggle("bg-white");
-            body.classList.toggle("bg-black");
-            body.classList.toggle("text-black");
-            body.classList.toggle("text-white");
-            tgbutton.classList.toggle("bg-gray-700");
-            tgbutton.classList.toggle("bg-black");
-            generateBtn.classList.toggle("bg-gray-700");
-            leftheader.classList.toggle("bg-gray-700");
-            rightheader.classList.toggle("bg-gray-700");
+            if (theme === "dark") {
+                body.classList.remove("bg-white");
+                body.classList.add("bg-black");
 
-            image.src = image.src.includes("score.png") ? dark : normal
+                toggleBtn.classList.remove("bg-black");
+                toggleBtn.classList.add("bg-gray-500");
+
+                generateBtn.classList.remove("bg-black");
+                generateBtn.classList.add("bg-gray-500");
+
+                image.src = dark;
+            } else {
+                body.classList.remove("bg-black");
+                body.classList.add("bg-white");
+
+                toggleBtn.classList.remove("bg-gray-500");
+                toggleBtn.classList.add("bg-black");
+
+                generateBtn.classList.remove("bg-gray-500");
+                generateBtn.classList.add("bg-black");
+
+                image.src = normal;
+            }
         }
+
+        function toggleTheme() {
+            const current = localStorage.getItem("theme");
+            const next = current === "dark" ? "light" : "dark";
+            localStorage.setItem("theme", next);
+            applyTheme(next);
+        }
+
+        window.onload = () => {
+            const saved = localStorage.getItem("theme") || "light"; // padrão
+            applyTheme(saved);
+    };
+
     </script>
 </body>
 </html>
