--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -39,6 +39,13 @@
                         <fieldset id="voice1" class="w-64 border p-4 rounded mb-4">
                         <legend class="text-lg font-bold mb-2">Voice 1</legend>
 
+                        <label class="block mb-1 font-semibold">Clef:</label>
+                        <select name="min_note_1" class="border rounded p-2 w-full mb-3" id="selectclef1">
+                            <option value="T">Treble (G4 clef)</option>
+                            <option value="A">Alto (C4 clef)</option>
+                            <option value="B">Bass (F3 clef)</option>
+                        </select>
+
                         <label class="block mb-1 font-semibold">Lowest Note:</label>
                         <select name="min_note_1" class="border rounded p-2 w-full mb-3" id="select1l">
                             <option value="C3">C3</option>
@@ -57,6 +64,13 @@
                         <!-- Voice 2 -->
                         <fieldset id="voice2" class="w-64 border p-4 rounded mb-4 hidden">
                         <legend class="text-lg font-bold mb-2">Voice 2</legend>
+                        
+                        <label class="block mb-1 font-semibold">Clef:</label>
+                        <select name="min_note_1" class="border rounded p-2 w-full mb-3" id="selectclef2">
+                            <option value="T">Treble (G4 clef)</option>
+                            <option value="A">Alto (C4 clef)</option>
+                            <option value="B">Bass (F3 clef)</option>
+                        </select>
 
                         <label class="block mb-1 font-semibold">Lowest Note:</label>
                         <select name="min_note_2" class="border rounded p-2 w-full mb-3" id="select2l">
