--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -40,25 +40,17 @@
                         <legend class="text-lg font-bold mb-2">Voice 1</legend>
 
                         <label class="block mb-1 font-semibold">Clef:</label>
-                        <select name="min_note_1" class="border rounded p-2 w-full mb-3" id="selectclef1">
+                        <select name="clef1" class="border rounded p-2 w-full mb-3" id="selectclef1">
                             <option value="T">Treble (G4 clef)</option>
                             <option value="A">Alto (C4 clef)</option>
                             <option value="B">Bass (F3 clef)</option>
                         </select>
 
                         <label class="block mb-1 font-semibold">Lowest Note:</label>
-                        <select name="min_note_1" class="border rounded p-2 w-full mb-3" id="select1l">
-                            <option value="C3">C3</option>
-                            <option value="D3">D3</option>
-                            <option value="E3">E3</option>
-                        </select>
+                        <select id="select1l" name="min_note_1" class="select-theme border rounded p-2 w-full mb-3"></select>
 
                         <label class="block mb-1 font-semibold">Highest Note:</label>
-                        <select name="max_note_1" class="border rounded p-2 w-full" id="select1h">
-                            <option value="C5">C5</option>
-                            <option value="D5">D5</option>
-                            <option value="E5">E5</option>
-                        </select>
+                        <select id="select1h" name="max_note_1" class="select-theme border rounded p-2 w-full mb-3"></select>
                         </fieldset>
 
                         <!-- Voice 2 -->
@@ -66,25 +58,17 @@
                         <legend class="text-lg font-bold mb-2">Voice 2</legend>
                         
                         <label class="block mb-1 font-semibold">Clef:</label>
-                        <select name="min_note_1" class="border rounded p-2 w-full mb-3" id="selectclef2">
+                        <select name="clef2" class="border rounded p-2 w-full mb-3" id="selectclef2">
                             <option value="T">Treble (G4 clef)</option>
                             <option value="A">Alto (C4 clef)</option>
                             <option value="B">Bass (F3 clef)</option>
                         </select>
 
                         <label class="block mb-1 font-semibold">Lowest Note:</label>
-                        <select name="min_note_2" class="border rounded p-2 w-full mb-3" id="select2l">
-                            <option value="C2">C2</option>
-                            <option value="D2">D2</option>
-                            <option value="E2">E2</option>
-                        </select>
+                        <select id="select2l" name="min_note_2" class="select-theme border rounded p-2 w-full mb-3"></select>
 
                         <label class="block mb-1 font-semibold">Highest Note:</label>
-                        <select name="max_note_2" class="border rounded p-2 w-full" id="select2h">
-                            <option value="B3">B3</option>
-                            <option value="C4">C4</option>
-                            <option value="D4">D4</option>
-                        </select>
+                        <select id="select2h" name="max_note_2" class="select-theme border rounded p-2 w-full mb-3"></select>
                         </fieldset>
                     </div>
                 </div>
