--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,6 +14,12 @@
         <div class="flex flex-col items-center justify-center min-h-screen text-center">
             <form action="{{ url_for('main.generate') }}" method="post">
 
+                <!-- Shared Scale Selection -->
+                <div class="my-4">
+                    <label class="block mb-1 font-semibold">Scale:</label>
+                    <select name="scale" id="scale" class="border rounded p-2 w-36 mb-3"></select>
+                </div>
+
                 <p class="block mb-1 font-semibold">Number of voices:</p>
 
                 <!-- Radio Voice Selection -->
