Scale Definition and image fix

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -86,7 +86,7 @@
 
     <!-- Central Column -->
     <div class="flex items-center justify-center shrink-0">
-        <img src="{{ url_for('static', filename='score.png') }}" alt="Generated Score" id="score">
+        <img src="{{ url_for('static', filename='score.png') }}" class="max-h-screen object-contain" alt="Generated Score" id="score">
     </div>
 
     <!-- Right Column -->
