--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 
-                <button id="generateBtn" class="m-4 px-4 py-2 rounded bg-black hover:bg-gray-400 font-bold border-b-3 border-b-gray-700 text-white" type="submit">Generate Score</button>
+                <button id="generateBtn" class="m-4 px-4 py-2 rounded bg-black hover:bg-gray-400 font-bold border-b-3 border-b-gray-700 text-white cursor-pointer" type="submit">Generate Score</button>
             </form>
         </div>
     </div>
@@ -94,7 +94,7 @@
         <h2 id="rightheader" class="text-3xl  font-bold p-6 bg-black border-b-9 border-b-gray-700">Settings</h2>
         <div class="flex flex-col items-center justify-center min-h-screen">
             <button onclick="toggleTheme()" id="botao"
-                class="m-4 px-4 py-2 bg-black hover:bg-gray-400 rounded font-bold border-b-3 border-b-gray-700">
+                class="m-4 px-4 py-2 bg-black hover:bg-gray-400 rounded font-bold border-b-3 border-b-gray-700 cursor-pointer">
                 Toggle Theme
             </button>
         </div>
